# optimizing-memory

./: .gitignore  02-analysis-for-reviewers.ipynb  03-behavioral-data-preprocessing.ipynb  04-miscellaneous.ipynb  CL_classification_results_encoding.pkl  CL_session_classification_results.pkl  NICLS_Final_Report_CL.ipynb  README.md  analysis-for-reviewers.ipynb  behavioral-data-preprocessing.ipynb  bids_data.ipynb  biosemi_cap_bipolar_pairs.txt  classifier_alignment.ipynb  classifier_io.py  compute_raw_event_features.py  compute_scalp_features.py  early_prestimulus_CL_classification_results_encoding.pkl  early_prestimulus_CL_session_classification_results.pkl  final_subject_list.txt  miscellaneous.ipynb  multivariate.ipynb  nicls_helpers.py  nicls_helpers_old.py  optimize-memory-main.ipynb  performance_stats.tex  post_hoc_classification.ipynb  prestimulus_CL_classification_results_encoding.pkl  prestimulus_CL_session_classification_results.pkl  pyproject.toml  system_performance_stats_FR_only.csv
.ipynb_checkpoints/: NICLS_Final_Report_CL-checkpoint.ipynb  analysis-for-reviewers-checkpoint.ipynb  classifier_alignment-checkpoint.ipynb  compute_scalp_features-checkpoint.py  miscellaneous-checkpoint.ipynb  multivariate-checkpoint.ipynb  nicls_helpers-checkpoint.py  post_hoc_classification-checkpoint.ipynb
R_code/: .Rhistory  AUC_effect_interactions.R  IV_modeling_NICLS.R  classifier_calibration.R  memory-improvement.qmd
archive/: memory_improvement_data.csv
data/: RO_encoding_loso_calibration_data.csv  channel_array.npy  classifier_events_with_matched_predictions.csv  (+3 more)
(+20 files in other folders)
